--- a/resource/前端学习/前端学习路线以及主要知识点.md
+++ b/resource/前端学习/前端学习路线以及主要知识点.md
@@ -281,3 +281,30 @@ fixed：对象脱离常规流，但偏移定位是以窗口为参考。当出现
 <font color="red">需要注意的是，当position为absolute或fixed的时候，必须要写top或bottom和right或left的值，否则会出现意想不到的效果</font>
     - z-index：默认auto，z-index的值越大，越渲染到上方。
 这个属性针对定位元素，当不设置z-index的时候，元素的层叠顺序按照文档流的渲染顺讯，从上到下，从父到子。后渲染的在先渲染的元素上方。
+2. 布局
+    - display:inline/block/inline-block/等
+>设置display的值可以改变一个元素的布局类型  
+inline：行内元素，行内元素不可以设置margin，padding，width，height的值
+block：块级元素
+inline-block：行内块元素，也就是这个元素不占据整行，但是又可以像block一样设置宽高等属性，inline-block有一个特点，如下：
+~~~
+<ul>
+    <li>1</li>
+    <li>1</li>
+    <li>1</li>
+</ul>
+~~~
+<font color="red">当设置li的display为inline-block时，li之间会有几个像素的间距，这是因为两个li之间有换行符或空格，如果不希望有间隙的话可以将两个li之间的空格和换行符删除掉，如下：</font>
+~~~
+<ul>
+    <li>1</li><li>2</li><li>3</li>
+</ul>
+~~~
+>display还有很多其他的布局类型，以上为比较常用的三种，其他类型可查阅文档。
+
+    - float left/right/none
+>浮动：当设置元素浮动时，浮动的元素会脱离正常的文档流，也就是它不会占据正常文档流的空间，后面的元素会忽略这个元素的空间。  
+当我们需要将两个元素进行左右布局的时候，经常会使用浮动布局。  
+
+    - clear left/right/both/none
+>清除浮动，
