--- a/resource/前端学习/前端学习路线以及主要知识点.md
+++ b/resource/前端学习/前端学习路线以及主要知识点.md
@@ -1,4 +1,15 @@
 #前端学习路径
+[TOC]
+##参考文档
+1. [MDN web技术文档api](https://developer.mozilla.org/zh-CN/docs/Web)
+2. [W3cschool](http://www.w3school.com.cn/index.html)
+3. [菜鸟教程](http://www.runoob.com/)
+2. [jquery api](http://jquery.cuishifeng.cn/)
+3. [css api](http://www.css88.com/book/css/)
+4. [廖雪峰的官网](https://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000/)
+5. [阮一峰的官网](http://www.ruanyifeng.com/blog/javascript/)
+6. [张鑫旭的官网](http://www.zhangxinxu.com/wordpress/category/css/)
+
 ##HTML
 ###html元素  
 ####什么是html元素
@@ -279,7 +290,7 @@ p:before{
 也可通过[特指度](http://www.cnblogs.com/wangfupeng1988/p/4285251.html)计算选择器的优先级  
 
 #####属性
->介绍了css选择器后，就可以为所选元素添加属性了，由于css属性非常多，下面只介绍一些常用的属性。
+>介绍了css选择器后，就可以为所选元素添加属性了，由于css属性非常多，下面只介绍一些常用的比较难理解的属性。其他属性请自行查看[文档](http://www.css88.com/book/css/)
 
 1. 定位
     - position:static/relative/absolute/fixed,默认static（相当于没有定位）
@@ -341,7 +352,52 @@ scroll:始终显示滚动条
 2. 制作雪碧图
 3. photoshop的简单操作
 
+##JavaScript
+>javascript的知识点非常多，它不像html一样，只了解基本用法，使用的时候查手册就可以了，js的基本知识一定要清楚，否则写代码的时候就无法下手了。 
+
+>[JavaScript 知识点整理](http://www.jianshu.com/p/66f3aef3e131)  
+>[关于函数参数传递](http://www.cnblogs.com/souvenir/p/4969092.html)
+>[正则表达式](http://www.jianshu.com/p/a8ce5341094c)
 
 
+>[window.opener关于两个页面间的数据交互](https://mehuo.github.io/2017/10/17/opener/) <font color="#ccc">by 亚楠</font>  
+
+###this
+>[Javascript的this用法](http://www.ruanyifeng.com/blog/2010/04/using_this_keyword_in_javascript.html)
+>[JavaScript中的this陷阱的最全收集--没有之一](https://segmentfault.com/a/1190000002640298)
 
 
+###[正则表达式](http://www.runoob.com/regexp/regexp-syntax.html)
+
+###定时器
+><font color="red">定时器的内容在js高级程序设计中讲解的非常详细</font>  
+>[JavaScript定时器实现的原理分析](http://www.jb51.net/article/99174.htm)
+
+###窗口大小
+>[JavaScript获取DOM元素位置和尺寸大小](http://www.cnblogs.com/dolphinX/archive/2012/11/19/2777756.html)
+>[JS & jQuery 获取元素位置尺寸](http://www.jianshu.com/p/187c0145248c)
+
+###事件
+>[JavaScript中的事件处理机制](http://www.jianshu.com/p/496a223f9f26)  
+>[《JavaScript 闯关记》之事件](http://www.jianshu.com/p/5dc94eb0a27e)
+>[HTML DOM Event 对象各个事件详细信息](http://www.w3school.com.cn/jsref/dom_obj_event.asp)
+
+###浏览器cookie
+>[Cookie/Session机制详解](http://blog.csdn.net/fangaoxin/article/details/6952954/)
+>[JavaScript Cookie](http://www.runoob.com/js/js-cookies.html)
+
+###HttpRequest和Ajax请求
+>[HTTP协议详解（真的很经典）](http://www.cnblogs.com/li0803/archive/2008/11/03/1324746.html)
+>[http协议详解](http://www.cnblogs.com/TankXiao/archive/2012/02/13/2342672.html)
+>[http协议入门](http://www.ruanyifeng.com/blog/2016/08/http.html)
+
+>[原生js--http请求](http://www.cnblogs.com/charling/p/3579704.html)
+>[ajax](http://jquery.cuishifeng.cn/jQuery.Ajax.html)
+
+####[跨域](http://jiangsha.iteye.com/blog/1733864)
+
+###JSON和js对象
+><font color="red">JSON和js对象是不一样的，请注意</font>
+>[Json 与 javascript 对象的区别](http://www.cnblogs.com/leeyen/p/6806875.html)
+>[JSON是什么？JSON和JS对象的区别和JSON的基本应用](http://www.zhufengpeixun.cn/jishuziliao/javaScriptzhuanti/2015-04-10/325.html)
+>[说说JSON和JSONP，也许你会豁然开朗](http://kb.cnblogs.com/page/139725/)
